syntax = "proto3";

// Copyright (c) 2018 Bhojpur Consulting Private Limited, India. All rights reserved.

// Permission is hereby granted, free of charge, to any person obtaining a copy
// of this software and associated documentation files (the "Software"), to deal
// in the Software without restriction, including without limitation the rights
// to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
// copies of the Software, and to permit persons to whom the Software is
// furnished to do so, subject to the following conditions:

// The above copyright notice and this permission notice shall be included in
// all copies or substantial portions of the Software.

// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
// IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
// FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
// AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
// LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
// OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
// THE SOFTWARE.

package repoplugin;
option go_package = "/common";

import "api/v1/piro.proto";


service RepositoryPlugin {
    // RepoHost returns the host which this plugins integrates with
    rpc RepoHost(RepoHostRequest) returns (RepoHostResponse) {};

    // Resolve resolves the repo's revision based on its ref(erence) 
    rpc Resolve(ResolveRequest) returns (ResolveResponse) {};

    // ContentInitContainer produces the init container YAML required to initialize 
    // the build context from this repository in /workspace.
    rpc ContentInitContainer(ContentInitContainerRequest) returns (ContentInitContainerResponse) {};

    // Download downloads a file from the repository.
    rpc Download(DownloadRequest) returns (DownloadResponse) {};

    // ListFiles lists all files in a directory.
    rpc ListFiles(ListFilesRequest) returns (ListFilesReponse) {};

    // GetRemoteAnnotations extracts Bhojpur Piro annotations form information associated
    // with a particular commit, e.g. the commit message, PRs or merge requests.
    // Implementors can expect the revision of the repo object to be set.
    rpc GetRemoteAnnotations(GetRemoteAnnotationsRequest) returns (GetRemoteAnnotationsResponse) {};
}

message RepoHostRequest {}

message RepoHostResponse {
    string host = 1;
}

message ResolveRequest {
    v1.Repository repository = 1;
}

message ResolveResponse {
    v1.Repository repository = 1;
}

message ContentInitContainerRequest {
    v1.Repository repository = 1;
    repeated string paths = 2;
}

message ContentInitContainerResponse {
    bytes container = 1;
}

message DownloadRequest {
    v1.Repository repository = 1;
    string path = 2;
}

message DownloadResponse {
    bytes content = 1;
}

message ListFilesRequest {
    v1.Repository repository = 1;
    string path = 2;
}

message ListFilesReponse {
    repeated string paths = 1;
}

message GetRemoteAnnotationsRequest {
    v1.Repository repository = 1;
}

message GetRemoteAnnotationsResponse {
    map<string, string> annotations = 1;
}
